# Picasa-Gallery-Android

./: .gitignore  .travis.yml  README.md  WORKSPACE  build.gradle  ci.gradle  codecov.yml  gradle.properties  jacoco.gradle  settings.gradle  sonarqube.gradle
.github/workflows/: android.yml
app/: build.gradle  dependencies.gradle  lint-baseline.xml  proguard-rules.pro
app/src/dev/: google-services.json
app/src/dev/java/io.shtanko.picasagallery/: AlbumsRepositoryModule.kt
app/src/dev/kotlin/io.shtanko.picasagallery/: AlbumsRepositoryModule.kt  InternalAlbumsDataModule.kt  PhotosDataSourceModule.kt  UserModule.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Properties.cpp  Properties.h  PropertiesParser.cpp  PropertiesParser.h  PropertiesUtils.cpp  PropertiesUtils.h  input.properties  main.cpp
app/src/main/kotlin/: Config.kt  config.properties
app/src/main/res/layout/: activity_main.xml  activity_signin.xml  container_activity.xml  fragment_siginin.xml  main_content.xml  toolbar.xml
app/src/main/res/layout-v21/: toolbar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: glide_disk_cache_path.xml
app/src/mock/java/io.shtanko.picasagallery/: AlbumsRepositoryModule.kt  MockAlbumDataSourceImpl.kt
config/: ci-create-avd.sh  ci-instrumentation-tests.sh  ci-setup-emulator.sh  ci-unit-tests.sh  ci.sh  config.properties  debug.keystore  debug.properties  flavor.properties  flavor.sh  release.properties
gradle/wrapper/: gradle-wrapper.properties
(+411 files in other folders)
